# Rust-HTTP

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/client/: client.rs  config.rs  mod.rs  stream_factory.rs
src/common/: header.rs  method.rs  mod.rs  parse.rs  request.rs  response.rs  status.rs  thread_pool.rs
src/deframe/: body_deframer.rs  crlf_line_deframer.rs  deframe.rs  error.rs  error_take.rs  headers_and_body_deframer.rs  headers_deframer.rs  message_deframer.rs  mod.rs  request.rs  request_deframer.rs  response_deframer.rs  test_util.rs
src/deframing/: error.rs  mod.rs  request.rs
src/log/: log.rs  mod.rs
src/parse/: body.rs  common.rs  crlf_line.rs  error.rs  error_take.rs  headers.rs  message.rs  mod.rs  parse.rs  request.rs  response.rs  test_util.rs
src/parse2/: body.rs  crlf_line.rs  error.rs  error_take.rs  headers.rs  message.rs  parse.rs  request.rs  response.rs  test_util.rs
src/read/: body_reader.rs  crlf_line_reader.rs  error.rs  error_take.rs  headers_and_body_reader.rs  headers_reader.rs  message_reader.rs  mod.rs  request_reader.rs  response_reader.rs
src/server/: buf_stream.rs  config.rs  connection.rs  listen.rs  mod.rs  nonblocking_buf_writer.rs  oos.rs  poll.rs  reusable_connection.rs  router.rs  server.rs  slab.rs  slots.rs
src/util/: buf_stream.rs  log.rs  mock.rs  mod.rs  parse.rs  slab.rs  stream.rs  tls_stream.rs
tests/: client.rs  http_client.rs  http_server.rs  https_client.rs  https_server.rs  server.rs  server_https.rs
tests/certs/: server.crt  server.csr  server.key
tests/files/: test.html
(+21 files in other folders)
