[package]
name = "my_http"
version = "0.1.0"
authors = ["funkiben <funkiben@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
tokio = { version = "0.2.22", features = ["tcp", "rt-core", "io-util", "sync"] }
tokio-rustls = "0.14.0"

[dev-dependencies.tokio]
version = "*"
features = ["macros", "rt-threaded"]